static/styles/style.css
/* || Global Variables */

:root {
  --color-primary: #3F72AF;
  --color-secondary: #B83B5E;
  --color-background: #F9F7F7;
  --color-text-body: #323232;
  --color-text-heading: #112D4E;
  --color-text-muted: #6B7280;
  --color-text-subtle: #D1D5DB;
  --color-mesh-bg: #F9F7F7;
  --color-mesh-bg-2: #EFF1F5;
  --color-mesh-fg: #DADADA;
  --page-width: 48rem;
  --font-heading: "Lora", serif;
  --font-body: "Ubuntu Sans", sans-serif;
  --font-code: "Space Mono", monospace;
}

/* || General styles */

a {
  color: inherit;
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
  text-decoration-thickness: .2ex;
  text-decoration-style: dotted;
  text-underline-offset: .6ex;
}

body {
  font-family: var(--font-body);
  font-size: 16px;
  color: var(--color-text-body);
  background-color: var(--color-background);
  margin: 0 auto;
  max-width: var(--page-width);
  line-height: 1.6;
  padding: 4rem 1.5rem;
}

blockquote {
  border-left: 1px solid var(--color-text-muted);
  color: var(--color-text-muted);
  padding-left: 20px;
  font-style: italic;
}

code {
  background-color: var(--color-mesh-bg);
  background-image: radial-gradient(var(--color-mesh-fg) 1px, transparent 1px);
  background-size: 5px 5px;
  border: 1px solid var(--color-mesh-fg);
  border-radius: 5px;
  color: var(--color-text-code);
  font-family: var(--font-code);
  font-size: 0.9em;
  padding-left: 2px;
  padding-right: 2px;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  color: var(--color-text-heading);
  font-family: var(--font-heading);
}

h1 { font-size: 1.5em; }
h2 { font-size: 1.33em; }
h3 { font-size: 1.17em; }
h4 { font-size: 1.1em; }
h5 { font-size: 1em; }
h6 { font-size: 0.9em; }

h1::before { content: "# "; color: var(--color-primary) }
h2::before { content: "## "; color: var(--color-primary) }
h3::before { content: "### "; color: var(--color-primary) }
h4::before { content: "#### "; color: var(--color-primary) }
h5::before { content: "##### "; color: var(--color-primary) }
h6::before { content: "###### "; color: var(--color-primary) }

img {
  max-width: 100%;
  height: auto;
}

pre code {
  display: block;
  padding: 20px;
  white-space: pre-wrap;
  overflow-x: auto;
  text-wrap: nowrap;
}

table {
  width: 100%;
}

table,
th,
td {
  border: 1px solid;
  border-collapse: collapse;
  border-color: var(--color-primary);
  padding: 5px;
}

th {
  color: var(--color);
  background-color: var(--color-mesh-bg-2);
}

ul,
ol {
  padding-left: 1.5rem;
}

/* || Header and Nav */

header {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

header div {
  align-items: center;
  color: var(--color-secondary);
  display: flex;
  font-size: 1.8em;
  gap: 0.5rem;
}

header nav {
  color: var(--color-text-heading);
  display: flex;
  font-size: 1.2em;
  gap: 1rem;
}

header img {
  width: 32px;
  height: 32px;
  border-radius: 50%;
}

/* || Main and content */

main a {
  font-family: var(--font-code);
  color: var(--color-primary);
}

/* || Footer */

footer {
  margin-top: 2rem;
  text-align: center;
  font-size: 0.9rem;
  color: var(--color-text-muted);
}

footer div {
  display: flex;
  justify-content: center;
  gap: 1rem;
  text-align: center;
}

footer a:hover svg {
  color: var(--color-secondary);
}

/* || Utilities */

.align-text-svg {
  display: flex;
  align-items: center;
}

.blog-list {
  padding-left: 0;
  margin: 0 auto;
  max-width: 95%;
}

.blog-list-item {
  margin: 20px 0;
  border-radius: 5px;
  transition: border-color 0.2s ease, background-color 0.2s ease;
}

.blog-list-item:hover {
  background-color: var(--color-mesh-bg-2);
  background-image: none;
  border-color: var(--color-primary);
}

.blog-list-item:hover span {
  color: var(--color-secondary);
}

a.blog-list-item-link {
  font-family: var(--font-body);
  color: var(--color-text-body);
  display: block;
  padding: 20px;
}

a.blog-list-item-link:hover {
  text-decoration: none;
}

.blog-list-item-header {
  align-items: baseline;
  display: flex;
  gap: 1rem;
  justify-content: space-between;
}

.blog-list-item-header span {
  font-family: var(--font-heading);
  color: var(--color-text-heading);
  transition: color 0.2s ease;
}

.blog-list-item-header time {
  font-family: var(--font-code);
  font-size: 0.85rem;
  color: var(--color-text-muted);
}

.blog-list-item-link p {
  color: var(--color-text-muted);
}

.color-text-primary {
  color: var(--color-primary);
}

.color-text-secondary {
  color: var(--color-secondary);
}

.color-text-heading {
  color: var(--color-text-heading);
}

.color-text-muted {
  color: var(--color-text-muted);
}

.font-body {
  font-family: var(--font-body);
}

.font-code {
  font-family: var(--font-code);
}

.font-heading {
  font-family: var(--font-heading);
}

.margin-left-10 {
  margin-left: 10px;
}

.margin-right-5 {
  margin-right: 5px;
}

.margin-right-10 {
  margin-right: 10px;
}

.margin-top-10 {
  margin-top: 10px;
}

.mesh {
  background-color: var(--color-mesh-bg);
  background-image: radial-gradient(var(--color-mesh-fg) 1px, transparent 1px);
  background-size: 5px 5px;
}

.mesh-border {
  border: 1px solid var(--color-mesh-fg);
}

.no-bullets {
  list-style: none;
}

svg.icon {
  display: inline-block;
}

svg.social {
  display: inline-block;
}

/* || Mobile screens */
@media (max-width: 48.75em) {
  header {
    flex-direction: column;
    align-items: flex-start;
  }

  header div {
    padding-bottom: 1vh;
  }
}

